--- a/bookRecipies.html
+++ b/bookRecipies.html
@@ -11,12 +11,15 @@
 </head>
 <body>
     <div class="container"  id="container">
-         <h1>Hello! <br>
+       <div class="main" id="main">
+        <h1>Hello! <br>
         What would you eat? </h1>
         <input type="text" id="searchInput" placeholder="Enter recipe name here">
         <button id="searchButton">Search</button>
+        </div>
+
          <div id="recipeContainer"></div>
-         <div class="rating" data-recipe-id="${recipe.id}"></div>
+         
         <button id="backButton" style="display: none;">Back</button>        
    </div>
 
